<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">

        <item android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/home"/>

        <item android:id="@+id/nav_photos"
            android:icon="@drawable/ic_photos"
            android:title="@string/photos"/>

        <item android:id="@+id/nav_movies"
            android:icon="@drawable/ic_movies"
            android:title="@string/movies"/>

        <item android:id="@+id/nav_notification"
            android:icon="@drawable/ic_notification"
            android:title="@string/notification"/>

        <item android:id="@+id/nav_settings"
            android:icon="@drawable/ic_settings"
            android:title="@string/settings"/>

        <item android:title="@string/others">
            <menu>
                <group>
                    <item android:id="@+id/nav_about_us"
                        android:title="@string/about_us"/>
                    <item android:id="@+id/nav_privacy_policy"
                        android:title="@string/privacy_policy"/>
                </group>
            </menu>
        </item>

    </group>

</menu>